# GraGLeS2D

./: README.md
docs/images/: Thumbs.db
docs/source/: conf.py  index.rst  input.rst  setup.rst  simulate.rst  topotracer.rst  tracing.rst  visualize.py  visualize.rst
params/: MagneticField.xml  TitaniumFromEBSD.xml  parameters.xml
scripts/: EBSDdataConverter.m  README.md  correctEBSD.m  plotNetworkAtTime.sh  plotNetworkAtTimeLabeled.sh  produceAnimation_aux.sh  produceAreaVariation.sh  produceNormalizedSEDF.sh
src/: BenchmarkJobs.sh  CMakeLists.txt  Doxyfile  ExpandingVector.h  IGrainScheduler.h  IterativeGrainScheduler.cpp  IterativeGrainScheduler.h  JobScriptLevelSet_IMM.sh  Quaternion.cpp  Quaternion.h  RTree.h  SCORE_Random.cpp  SCORE_Random.h  Settings.cpp  Settings.h  SquaresGrainScheduler.cpp  SquaresGrainScheduler.h  Structs.h  allocator.cpp  applic.h  box.cpp  box.h  charasteristic.h  contourSector.cpp  contourSector.h  dataPrecision.h  dimensionalBuffer.h  dimensionalBufferIDLocal.h  dimensionalBufferReal.h  ggLS.cpp  ggLS.h  grahamScan.cpp  grahamScan.h  grainBoundary.cpp  grainBoundary.h  grainhdl.cpp  grainhdl.h  junction.cpp  junction.h  marchingSquares.cpp  (+14 more)
src/voro++/include/voro++/: cell.hh  container.hh
